# artifaq

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/: FUNDING.yml
artifaq/: __init__.py  artifaq.py  cli.py  config_manager.py  logger.py  main.py
artifaq/apps/: app.py  app_config.py  config_router.py  router.py
artifaq/config/: app_config.py  project_config.py  register_config.py
artifaq/configs/: app_config.py  config_manager.py  cors_config.py
artifaq/core/: bootstrap.py  dependancy_injection.py  routing.py
artifaq/database/: base.py
artifaq/errors/: ArtifaqError.py
artifaq/interfaces/: appconfig.py  corsconfig.py
artifaq/repository/: base_repository.py
artifaq/service/: base_service.py
artifaq/templates/: README.md.jinja  main.py.jinja  pyproject.toml.jinja
artifaq/utils/: load_app_config.py  load_app_interface.py
example/: main.py  start.sh
example/apps/home/: __init__.py  config.py  router.py
example/apps/test/: config.py  providers.py  router.py
example/config/: app.py  cors.py  database.py
example/config/apps/: home.py  test.py
