[tool.poetry]
name = "artifaq"
version = "0.1.0"
description = ""
authors = ["lguerra <l.guerra--rago@xefi.fr>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
