[tool.poetry]
name = "artifaq"
version = "0.1.0"
description = ""
authors = ["lguerra <l.guerra--rago@xefi.fr>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
pretty-errors = "^1.2.25"
black = "^24.8.0"
bandit = "^1.7.9"
pylint = "^3.2.7"
mypy = "^1.11.2"
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
