[tool.poetry]
name = "artifaq"
version = "0.1.0"
description = "Un framework étendu basé sur FastAPI avec CLI d'initialisation"
authors = ["ER-28 <github.lather996@passmail.net>"]
packages = [
    { include = "*", from = "artifaq" },
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.103.0"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.20"
dependency-injector = "4.42.0b1"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
typer = "^0.9.0"
jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"

[tool.poetry.scripts]
my-fastapi-framework = "artifaq.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"